# src/config/api/endpoints.js
@@ -12,12 +12,22 @@ export const Endpoints = {
     ADD_FOOD: "/food",
     GET_FOOD_BY_USER: "/food/user/:id",
     GET_FOOD_BY_ROOM: "/food/room/:id",
+    ADD_FOOD_TO_ROOM: "/food/join",
+  },
+  ROOM: {
+    GET_ALL_ROOMS: "/room",
+    ADD_ROOM: "/room",
+    GET_ROOM_BY_USER: "/room/user/:id",
+    JOIN_ROOM: "/join",
+    GET_MY_ROOMS: "/my/:id",
   },
 };
 
 export const BasePoints = {
   USER: "users",
   FOOD: "food",
+  ROOM: "room",
+  ORDER: "order",
 };
 
 export const Swagger = {
