# src/models/room.model.js
@@ -1,0 +1,7 @@
+export class Room {
+  constructor(name, code, admin_id) {
+    this.name = name;
+    this.code = code;
+    this.admin_id = admin_id;
+  }
+}
