# src/start/swagger.json
@@ -1,19 +1,19 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Store App API",
+    "title": "Foodito",
     "version": "1.0.0"
   },
   "host": "localhost:3000",
   "basePath": "/",
   "schemes": ["http"],
   "paths": {
-    "/api/v1/store-app/stores": {
+    "/api/v1/users/users": {
       "get": {
-        "tags": ["Store"],
-        "summary": "Get all stores",
+        "tags": ["User"],
+        "summary": "Get all Users",
         "description": "",
-        "operationId": "getStores",
+        "operationId": "get-users",
         "produces": ["application/json"],
         "responses": {
           "200": {
@@ -21,7 +21,7 @@
             "schema": {
               "type": "array",
               "items": {
-                "$ref": "#/definitions/Store"
+                "$ref": "#/definitions/User"
               }
             }
           },
@@ -29,25 +29,25 @@
             "description": "Invalid status value"
           },
           "404": {
-            "description": "Store not found"
+            "description": "Users not found"
           }
         }
       },
       "post": {
-        "tags": ["Store"],
-        "summary": "Create a store",
+        "tags": ["User"],
+        "summary": "Create a user",
         "description": "",
-        "operationId": "createStore",
+        "operationId": "register",
         "produces": ["application/json"],
         "parameters": [
           {
             "in": "body",
             "name": "body",
-            "description": "Store object that needs to be added",
+            "description": "Food object that needs to be added",
             "required": true,
             "schema": {
               "type": "object",
-              "$ref": "#/definitions/Store"
+              "$ref": "#/definitions/User"
             }
           }
         ],
@@ -55,24 +55,24 @@
           "200": {
             "description": "Successful Operation",
             "schema": {
-              "$ref": "#/definitions/Store"
+              "$ref": "#/definitions/User"
             }
           },
           "400": {
             "description": "Invalid status value"
           },
           "404": {
-            "description": "Store not found"
+            "description": "Users not found"
           }
         }
       }
     },
-    "/api/v1/store-app/books": {
+    "/api/v1/food/food": {
       "get": {
-        "tags": ["Book"],
-        "summary": "Get all books",
+        "tags": ["Food"],
+        "summary": "Get all food",
         "description": "",
-        "operationId": "getBooks",
+        "operationId": "get-all-food",
         "produces": ["application/json"],
         "responses": {
           "200": {
@@ -80,7 +80,7 @@
             "schema": {
               "type": "array",
               "items": {
-                "$ref": "#/definitions/Book"
+                "$ref": "#/definitions/Food"
               }
             }
           },
@@ -88,25 +88,25 @@
             "description": "Invalid status value"
           },
           "404": {
-            "description": "Book not found"
+            "description": "Food not found"
           }
         }
       },
       "post": {
-        "tags": ["Book"],
-        "summary": "Create a book",
-        "description": "",
-        "operationId": "createBook",
+        "tags": ["Food"],
+        "summary": "add-food",
+        "description": "Add food to app",
+        "operationId": "add-food",
         "produces": ["application/json"],
         "parameters": [
           {
             "in": "body",
             "name": "body",
-            "description": "Book object that needs to be added",
+            "description": "Food object that needs to be added",
             "required": true,
             "schema": {
               "type": "object",
-              "$ref": "#/definitions/Book"
+              "$ref": "#/definitions/Food"
             }
           }
         ],
@@ -114,21 +114,21 @@
           "200": {
             "description": "Successful Operation",
             "schema": {
-              "$ref": "#/definitions/Book"
+              "$ref": "#/definitions/Food"
             }
           },
           "400": {
             "description": "Invalid status value"
           },
           "404": {
-            "description": "Book not found"
+            "description": "Food not found"
           }
         }
       }
     }
   },
   "definitions": {
-    "Store": {
+    "User": {
       "type": "object",
       "properties": {
         "id": {
@@ -138,19 +138,19 @@
         },
         "name": {
           "type": "string",
-          "example": "Store 1"
+          "example": "Tarek"
         },
-        "address": {
+        "email": {
           "type": "string",
-          "example": "Address 1"
+          "example": "tarek@gmail.com"
         },
-        "code": {
+        "password": {
           "type": "string",
-          "example": "Code 1"
+          "example": "12345678"
         }
       }
     },
-    "Book": {
+    "Food": {
       "type": "object",
       "properties": {
         "id": {
@@ -160,29 +160,56 @@
         },
         "name": {
           "type": "string",
-          "example": "Book 1"
-        },
-        "title": {
-          "type": "string",
-          "example": "Title 1"
-        },
-        "content": {
-          "type": "string",
-          "example": "Content 1"
-        },
-        "author": {
-          "type": "string",
-          "example": "Author 1"
-        },
-        "genre": {
-          "type": "string",
-          "example": "Genre 1"
+          "example": "Fatta"
         },
         "price": {
           "type": "number",
           "example": 100
         },
-        "storeId": {
+        "user_id": {
+          "type": "integer",
+          "format": "int64",
+          "example": 1
+        }
+      }
+    },
+    "Order": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64",
+          "example": 1
+        },
+        "user_id": {
+          "type": "integer",
+          "format": "int64",
+          "example": 1
+        },
+        "room_id": {
+          "type": "integer",
+          "format": "int64",
+          "example": 1
+        }
+      }
+    },
+    "Room": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64",
+          "example": 1
+        },
+        "name": {
+          "type": "string",
+          "example": "Room 1"
+        },
+        "code": {
+          "type": "string",
+          "example": "123456"
+        },
+        "admin_id": {
           "type": "integer",
           "format": "int64",
           "example": 1
